removed padding around image in top banner in swc.css in attempt to fix off-center placement of neon banner image

--- a/css/swc.css
+++ b/css/swc.css
@@ -81,7 +81,7 @@ div.banner {
 
 /* Padding around image in top banner. */
 div.banner a img {
-    padding: 20px 25px;
+    padding: 0px 0px;
 }
 
 /* Explanatory call-out boxes. */
